# rtype_test

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  make.bat  make.sh  prebuild.bat  prebuild.sh  pusher.sh  rtype-client  rtype-server  test_win
.github/workflows/: test.yml
CPM_modules/: FindSFML.cmake
Client/Include/: Back.hpp
Client/Sources/: Back.cpp  Back_menu.cpp
Game_Play/: Readme.md  boss_enemy.cpp  boss_enemy.hpp  ennemies.cpp  ennemies.hpp  manage_bombs.cpp  manage_bombs.hpp  space_ship_move.cpp  space_ship_move.hpp
assets/: 2023-11-29_20-29-54.png:Zone.Identifier  360_F.jpg:Zone.Identifier
mingw32/: version_info.txt
mingw32/i686-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xe  i386pe.xn  i386pe.xr  i386pe.xu
mingw32/include/: libyasm-stdint.h
mingw32/include/python3.9/: pyconfig.h
mingw32/lib/cmake/ParallelSTL/: ParallelSTLTargets.cmake
mingw32/lib/cmake/clang/: ClangConfig.cmake  ClangTargets.cmake
mingw32/lib/cmake/lld/: LLDConfig.cmake  LLDTargets-minsizerel.cmake  LLDTargets.cmake
mingw32/lib/cmake/llvm/: LLVMConfig.cmake  LLVMConfigVersion.cmake  LLVMExports.cmake
mingw32/lib/python3.9/: _sysconfigdata__win32_.py
mingw32/lib/python3.9/config-3.9/: Makefile
mingw32/lib/python3.9/lib-dynload/: _asyncio.cp39-mingw_i686.pyd  _bisect.cp39-mingw_i686.pyd  _blake2.cp39-mingw_i686.pyd  _codecs_cn.cp39-mingw_i686.pyd  _codecs_hk.cp39-mingw_i686.pyd  _codecs_iso2022.cp39-mingw_i686.pyd  _codecs_jp.cp39-mingw_i686.pyd  _codecs_kr.cp39-mingw_i686.pyd  _codecs_tw.cp39-mingw_i686.pyd  _contextvars.cp39-mingw_i686.pyd  _csv.cp39-mingw_i686.pyd  _ctypes_test.cp39-mingw_i686.pyd  _datetime.cp39-mingw_i686.pyd  _decimal.cp39-mingw_i686.pyd  _elementtree.cp39-mingw_i686.pyd  _hashlib.cp39-mingw_i686.pyd  _heapq.cp39-mingw_i686.pyd  _json.cp39-mingw_i686.pyd  _lsprof.cp39-mingw_i686.pyd  _md5.cp39-mingw_i686.pyd  _msi.cp39-mingw_i686.pyd  _multibytecodec.cp39-mingw_i686.pyd  _multiprocessing.cp39-mingw_i686.pyd  _opcode.cp39-mingw_i686.pyd  _overlapped.cp39-mingw_i686.pyd  _pickle.cp39-mingw_i686.pyd  _queue.cp39-mingw_i686.pyd  _random.cp39-mingw_i686.pyd  _sha1.cp39-mingw_i686.pyd  _sha256.cp39-mingw_i686.pyd  _sha3.cp39-mingw_i686.pyd  _sha512.cp39-mingw_i686.pyd  _socket.cp39-mingw_i686.pyd  _ssl.cp39-mingw_i686.pyd  _statistics.cp39-mingw_i686.pyd  _struct.cp39-mingw_i686.pyd  _testbuffer.cp39-mingw_i686.pyd  _testcapi.cp39-mingw_i686.pyd  _testconsole.cp39-mingw_i686.pyd  _testimportmultiple.cp39-mingw_i686.pyd  (+17 more)
mingw32/share/info/: gcc.info  gccint.info
mingw64/: version_info.txt
mingw64/lib/: libstdc++.dll.a-gdb.py
mingw64/lib/cmake/ParallelSTL/: ParallelSTLConfigVersion.cmake  ParallelSTLTargets.cmake
mingw64/lib/cmake/clang/: ClangConfig.cmake  ClangTargets-minsizerel.cmake  ClangTargets.cmake
mingw64/lib/cmake/lld/: LLDConfig.cmake  LLDTargets.cmake
mingw64/lib/cmake/llvm/: AddLLVM.cmake  LLVMConfig.cmake  LLVMExports-minsizerel.cmake  LLVMExports.cmake
mingw64/lib/python3.9/: _sysconfigdata__win32_.py
mingw64/lib/python3.9/config-3.9/: Makefile
mingw64/lib/python3.9/lib-dynload/: _asyncio.cp39-mingw_x86_64.pyd  _bisect.cp39-mingw_x86_64.pyd  _blake2.cp39-mingw_x86_64.pyd  _codecs_cn.cp39-mingw_x86_64.pyd  _codecs_hk.cp39-mingw_x86_64.pyd  _codecs_iso2022.cp39-mingw_x86_64.pyd  _codecs_jp.cp39-mingw_x86_64.pyd  _codecs_kr.cp39-mingw_x86_64.pyd  _codecs_tw.cp39-mingw_x86_64.pyd  _contextvars.cp39-mingw_x86_64.pyd  _csv.cp39-mingw_x86_64.pyd  _ctypes_test.cp39-mingw_x86_64.pyd  _datetime.cp39-mingw_x86_64.pyd  _decimal.cp39-mingw_x86_64.pyd  _elementtree.cp39-mingw_x86_64.pyd  _heapq.cp39-mingw_x86_64.pyd  _json.cp39-mingw_x86_64.pyd  _lsprof.cp39-mingw_x86_64.pyd  _md5.cp39-mingw_x86_64.pyd  _msi.cp39-mingw_x86_64.pyd  _multibytecodec.cp39-mingw_x86_64.pyd  _multiprocessing.cp39-mingw_x86_64.pyd  _opcode.cp39-mingw_x86_64.pyd  _overlapped.cp39-mingw_x86_64.pyd  _pickle.cp39-mingw_x86_64.pyd  _queue.cp39-mingw_x86_64.pyd  _random.cp39-mingw_x86_64.pyd  _sha1.cp39-mingw_x86_64.pyd  _sha256.cp39-mingw_x86_64.pyd  _sha3.cp39-mingw_x86_64.pyd  _sha512.cp39-mingw_x86_64.pyd  _socket.cp39-mingw_x86_64.pyd  _statistics.cp39-mingw_x86_64.pyd  _struct.cp39-mingw_x86_64.pyd  _testbuffer.cp39-mingw_x86_64.pyd  _testcapi.cp39-mingw_x86_64.pyd  _testconsole.cp39-mingw_x86_64.pyd  _testimportmultiple.cp39-mingw_x86_64.pyd  _testinternalcapi.cp39-mingw_x86_64.pyd  _testmultiphase.cp39-mingw_x86_64.pyd  (+15 more)
mingw64/share/gdb/: gdbinit
mingw64/share/info/: gcc.info  gccint.info
re_factor_serv/: Makefile  server
re_factor_serv/src/: Macros.hpp  Main.cpp  Packet.cpp  Packet.hpp
re_factor_serv/src/client/: Client.cpp  Client.hpp
re_factor_serv/src/server/: Server.cpp  Server.hpp
src/: build.sh  main_client.cpp  main_server.cpp
src/client/: CMakeLists.txt  Makefile  cmake_install.cmake
src/engine/: CMakeLists.txt  Makefile  cmake_install.cmake
src/engine/ECS/: Component.cpp  Entity.cpp  Entity.hpp  HealthComponent.hpp  InputComponent.cpp  InputComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/engine/combat/: ShootingSystem.hpp
src/engine/factory/: EntityFactory.hpp
src/engine/gameplay/: GameOverSystem.hpp  ScoreSystem.hpp
src/engine/input/: InputSystem.cpp  InputSystem.hpp
src/engine/physics/: CollisionComponent.hpp  CollisionSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
src/engine/rendering/: RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp
src/engine/sound/: SoundSystem.hpp
src/engine/spawn/: SpawningSystem.hpp
src/engine/utils/: ObjectPool.hpp
src/server/: CMakeLists.txt  Makefile  Packet.cpp  Packet.hpp  Packet_main.cpp  cmake_install.cmake  create_server.cpp  create_server.hpp  game_requests.cpp  protocole.txt
(+37 files in other folders)
